# 7801

./: MRM_EXECUTION_PLAN.md  MRM_Validation_Report_Optimized.md  build_report.js  main.py  make_slides.py  package-lock.json  pyproject.toml
.claude/: settings.local.json
outputs/: LR_Baseline.pkl  MRM_Presentation.pptx  MRM_Validation_Report.docx  MRM_Validation_Report_professional.docx  age_blind_perf_summary.csv  age_blind_table.csv  benchmark_table.csv  cv_results_lgbm.csv  executive_summary.txt  fairness_table.csv  imputation_validation.csv  mrs_scorecard.csv  psi_table.csv  sensitivity_analysis.csv  sr117_risk_taxonomy.csv  sr117_validation_checklist.csv
proposal/: proposal_7801.docx
src/: __init__.py  data_prep.py  models.py  risk_tiering.py  validation.py
